<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">梦梦</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="register_btn">注册</string>
    <string name="login_btn">登录</string>
    <string name="back_btn">返回</string>
    
    <string name="forget_password">忘记密码?</string>
    <string name="forget_password_step">忘记密码</string>
    <string name="next_step">下一步</string>
    <string name="input_password">请输入密码</string>
    <string name="input_phonenumber">请输入手机号</string>
    <string name="input_checkword">请输入验证码</string>
    <string name="getchecknumber_btn">获取验证码</string>
    <string name="rest_password">重置密码</string>
    <string name="finish">完成</string>
    <string name="service_rule">注册即表示同意梦梦服务条款</string>
	<string name="rest_password_tips">请输入新密码</string>
	
	<string name="setting_btn">设置</string>
	<string name="setting_username">郁净美</string>
	<string name="setting_username_edittips">点击查看/编缉</string>
	<string name="setting_mengmeng">梦一梦</string>
	<string name="setting_flowermanage">鲜花管理</string>
	<string name="setting_systemsetting">系统设置</string>
	<string name="setting_share">推荐给好友</string>
	<string name="setting_age">女  25</string>
	<string name="setting_marray">单身</string>
	<string name="setting_notmarray">其它</string>
	<string name="setting_city">重庆</string>
	<string name="setting_work">IT</string>
	
	<string name="setting_custominfo">我的信息</string>
	<string name="setting_mylovesport">爱好</string>
	<string name="setting_mylovesport_value">吃 睡 钓鱼 工作</string>
	<string name="setting_userlabel">签名</string>
	<string name="setting_userlabel_value">我就是我!</string>
	<string name="custominfo_modifycustominfo">修改资料</string>
	
	<string name="setting_username_key">姓名</string>
	<string name="setting_sex_key">性别</string>
	<string name="setting_sex_value">女</string>
	<string name="setting_birthday_key">生日</string>
	<string name="setting_birthday_value">1999/1/1</string>
	<string name="setting_marry_key">婚姻状况</string>
	
	<string name="setting_work_key">行业</string>
	<string name="setting_cit_key">城市</string>
	
	<string name="custominfo_infotitle">个人资料</string>
	<string name="custominfo_modify">修改</string>
	
	<string name="mainpage_sendmessage_btn">留言</string>
	<string name="mainpage_sendflower_btn">送花</string>
	
</resources>
