<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#cd4827"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_btn_back"
            android:paddingLeft="10dp"
            android:text="@string/back_btn"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/custominfo_modifycustominfo"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/mainuser_roundImageView"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/person_default" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/customuserinfo_detailpicture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/roundImageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/person_default" />

        <ImageView
            android:id="@+id/roundImageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/person_default" />

        <ImageView
            android:id="@+id/roundImageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/person_default" />

        <ImageView
            android:id="@+id/roundImageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/person_default" />

        <ImageView
            android:id="@+id/roundImageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/person_default" />
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.02dp"
        android:background="@drawable/black" />

    <LinearLayout
        android:id="@+id/customuserinfo_messageinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/setting_custominfo"
            android:textColor="#cd4827"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customuserinfo_allinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/customuserinfo_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_username_key"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_username"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>
		
        <LinearLayout
            android:id="@+id/customuserinfo_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_sex_key"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_sex_value"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>	
        
        <LinearLayout
            android:id="@+id/customuserinfo_birthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_birthday_key"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_birthday_value"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>	
        
        <LinearLayout
            android:id="@+id/customuserinfo_marry"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_marry_key"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_marray"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>
        
         <LinearLayout
            android:id="@+id/customuserinfo_city"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_cit_key"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_city"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>	
        
          <LinearLayout
            android:id="@+id/customuserinfo_work"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_work_key"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_work"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>	
        
          <LinearLayout
            android:id="@+id/customuserinfo_mylovesport"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_mylovesport"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_mylovesport_value"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>
        
           <LinearLayout
            android:id="@+id/customuserinfo_userlabel"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_userlabel"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_userlabel_value"
                android:textColor="@drawable/darkgray"
                android:textSize="17sp" />
        </LinearLayout>		
        
    </LinearLayout>

</LinearLayout>