<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/detailpictureinfo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" >
        </android.support.v4.view.ViewPager>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/dotgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>


        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:gravity="left" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/setting_username"
                android:textColor="@drawable/black"
                android:textSize="20sp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/customuserinfo_ageandmarry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/lightpink"
                android:gravity="left"
                android:text="@string/setting_age"
                android:textColor="@drawable/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/blue"
                android:gravity="left"
                android:text="@string/setting_marray"
                android:textColor="@drawable/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customuserinfo_work"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_work"
                android:textColor="@drawable/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:text="@string/setting_city"
                android:textColor="@drawable/black"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.02dp"
            android:background="@drawable/black" />

        <LinearLayout
            android:id="@+id/customuserinfo_workandcity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/setting_custominfo"
                android:textColor="#cd4827"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customuserinfo_workandcity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/customuserinfo_workandcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/setting_mylovesport"
                    android:textColor="@drawable/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/setting_mylovesport_value"
                    android:textColor="@drawable/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/customuserinfo_workandcity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/setting_userlabel"
                    android:textColor="#888"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/setting_userlabel_value"
                    android:textColor="#888"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    

</LinearLayout>